--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Scroll Website</title>
+    <title>Enotes</title>
     <link rel="stylesheet" href="styles.css" />
     <link
       rel="stylesheet"
@@ -71,22 +71,22 @@
         <div class="services__card">
           <h2>B.Tech CSE</h2>
           <p>1st Year</p>
-          <div class="services__btn"><button>Get Started</button></div>
+          <div class="services__btn"><button class="main__btn"><a href="first.html">Get Started</a></button></div>
         </div>
         <div class="services__card">
           <h2>B.Tech CSE</h2>
           <p>2nd Year</p>
-          <div class="services__btn"><button>Get Started</button></div>
+          <div class="services__btn"><button class="main__btn"><a href="second.html">Get Started</a></button></div>
         </div>
         <div class="services__card">
           <h2>B.Tech CSE</h2>
           <p>3rd Year</p>
-          <div class="services__btn"><button>Get Started</button></div>
+          <div class="services__btn"><button class="main__btn"><a href="third.html">Get Started</a></button></div>
         </div>
         <div class="services__card">
           <h2>B.Tech CSE</h2>
           <p>4th Year</p>
-          <div class="services__btn"><button>Get Started</button></div>
+          <div class="services__btn"><button class="main__btn"><a href="#">Get Started</a></button></div>
         </div>
       </div>
     </div>
@@ -102,7 +102,7 @@
         </div>
         <div class="main__img--container">
           <div class="main__img--card" id="card-2">
-            <i class="fas fa-users"></i>
+            <img src="pi5.svg">
           </div>
         </div>
       </div>
