--- a/third.html
+++ b/third.html
@@ -44,7 +44,7 @@
 
     <!-- Services Section -->
     <div class="services" id="services">
-      <h1>1st Year Notes</h1>
+      <h1>3rd Year Notes</h1>
       <div class="services__wrapper">
         <div class="services__card">
           <h2>B.Tech CSE</h2>
