--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
         <ul class="navbar__menu">
           <li class="navbar__item">
-            <a href="#home" class="navbar__links" id="home-page">Home</a>
+            <a href="index.html" class="navbar__links" id="home-page">Home</a>
           </li>
           <li class="navbar__item">
             <a href="#about" class="navbar__links" id="about-page">About</a>
@@ -40,73 +40,66 @@
       </div>
     </nav>
 
-    <!-- Hero Section -->
-    <div class="hero" id="home">
-      <div class="hero__container">
-        <h1 class="hero__heading">Your notes Your life Get <span>organized.</span></h1>
-        <p class="hero__description">Read more, Write less</p>
-        <button class="main__btn"><a href="#">Explore</a></button>
-      </div>
-    </div>
 
-    <!-- About Section -->
-    <div class="main" id="about">
-      <div class="main__container">
-        <div class="main__img--container">
-          <div class="main__img--card"><img src="pi1.svg"></div>
-        </div>
-        <div class="main__content">
-          <h1>What do we do?</h1>
-          <h2>We help Student</h2>
-          <p>Our company will officially provide a cloud-based platform which specializes in providing revision notes, fully researched essays with APA formatting</p>
-          <button class="main__btn"><a href="#">Know more</a></button>
-        </div>
-      </div>
-    </div>
 
     <!-- Services Section -->
     <div class="services" id="services">
-      <h1>Our Notes</h1>
+      <h1>1st Year Notes</h1>
       <div class="services__wrapper">
         <div class="services__card">
           <h2>B.Tech CSE</h2>
-          <p>1st Year</p>
-          <div class="services__btn"><button class="main__btn"><a href="first.html">Get Started</a></button></div>
+          <p>Enigineering Physics</p>
+          <div class="services__btn"><button class="main__btn"><a href="https://drive.google.com/file/d/1VVtJcsAxlukV0jCELrfwNdbd02R2NygJ/view?usp=sharing">Download</a></button></div>
         </div>
         <div class="services__card">
           <h2>B.Tech CSE</h2>
-          <p>2nd Year</p>
-          <div class="services__btn"><button class="main__btn"><a href="second.html">Get Started</a></button></div>
+          <p>Enigineering Chemistry</p>
+          <div class="services__btn"><button class="main__btn"><a href="https://drive.google.com/drive/folders/1tIsiVtcEVg4T03i8jf4Soua9EbWTWz4A">Download</a></button></div>
         </div>
         <div class="services__card">
           <h2>B.Tech CSE</h2>
-          <p>3rd Year</p>
-          <div class="services__btn"><button class="main__btn"><a href="third.html">Get Started</a></button></div>
+          <p>Enigineering Maths</p>
+          <div class="services__btn"><button class="main__btn"><a href="https://drive.google.com/file/d/1UFa9oLGFRz8UtbmCW9mOkIN7w0qCeTUf/view?usp=sharing">Download</a></button></div>
         </div>
         <div class="services__card">
           <h2>B.Tech CSE</h2>
-          <p>4th Year</p>
-          <div class="services__btn"><button class="main__btn"><a href="#">Get Started</a></button></div>
+          <p>Basic Electrical Engineering</p>
+          <div class="services__btn"><button class="main__btn"><a href="https://drive.google.com/file/d/1S4pI_S4vA4RlZOqQGM80Z75c4vBmE0Ou/view?usp=sharing">Download</a></button></div>
         </div>
+        <div class="services__card">
+            <h2>B.Tech CSE</h2>
+            <p>Programming for Problem Solving</p>
+            <div class="services__btn"><button class="main__btn"><a href="https://drive.google.com/file/d/1Ig7RgBnQR5iT-8yY5-WDqS_DK7584-rA/view?usp=sharing">Download</a></button></div>
+          </div>
+          <div class="services__card">
+            <h2>B.Tech CSE</h2>
+            <p>Emerging Domain in Electronics Engineering</p>
+            <div class="services__btn"><button class="main__btn"><a href="https://drive.google.com/file/d/1YsWXZjQYy-uKCd9DubliV9eVsTPhjtC5/view?usp=sharing">Download</a></button></div>
+          </div>
+          <div class="services__card">
+            <h2>B.Tech CSE</h2>
+            <p>Emerging Technology for Engineering</p>
+            <div class="services__btn"><button class="main__btn"><a href="https://drive.google.com/file/d/119K_4bnwvZSKinarbTSt1_ZuS2pwZMkQ/view?usp=sharing">Download</a></button></div>
+          </div>
+          <div class="services__card">
+            <h2>B.Tech CSE</h2>
+            <p>Soft Skills 1</p>
+            <div class="services__btn"><button class="main__btn"><a href="https://drive.google.com/file/d/1pHYniFRH_6PjUrzNXyMwScUBEOGwbnSY/view?usp=sharing">Download</a></button></div>
+          </div>
+          <div class="services__card">
+            <h2>B.Tech CSE</h2>
+            <p>Soft Skills 2</p>
+            <div class="services__btn"><button class="main__btn"><a href="https://drive.google.com/file/d/1Si0UL-pxglUvCo2KaXp0hIHwZBSZ34Fu/view?usp=sharing">Download</a></button></div>
+          </div>
+          <div class="services__card">
+            <h2>B.Tech CSE</h2>
+            <p>Artificial Intelligence</p>
+            <div class="services__btn"><button class="main__btn"><a href="https://drive.google.com/file/d/1ejnKl-VAtMUXKjx7pjte6KjkTOHUe8g5/view?usp=sharing">Download</a></button></div>
+          </div>
       </div>
     </div>
 
-    <!-- Features Section -->
-    <div class="main" id="sign-up">
-      <div class="main__container">
-        <div class="main__content">
-          <h1>Join Our Team</h1>
-          <h2>Sign Up Today</h2>
-          <p>See what makes us different</p>
-          <button class="main__btn"><a href="#">Sign Up</a></button>
-        </div>
-        <div class="main__img--container">
-          <div class="main__img--card" id="card-2">
-            <img src="pi5.svg">
-          </div>
-        </div>
-      </div>
-    </div>
+    
 
     <!-- Footer Section -->
     <div class="footer__container">
