--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=1.0, user-scalable=no">
     <title>Enotes</title>
     <link rel="stylesheet" href="styles.css" />
     <link
@@ -11,6 +11,7 @@
       integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc"
       crossorigin="anonymous"
     />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   </head>
   <body>
     <!-- Navbar Section -->
@@ -23,7 +24,7 @@
         </div>
         <ul class="navbar__menu">
           <li class="navbar__item">
-            <a href="index.html" class="navbar__links" id="home-page">Home</a>
+            <a href="#home" class="navbar__links" id="home-page">Home</a>
           </li>
           <li class="navbar__item">
             <a href="#about" class="navbar__links" id="about-page">About</a>
@@ -40,66 +41,83 @@
       </div>
     </nav>
 
-
-
-    <!-- Services Section -->
-    <div class="services" id="services">
-      <h1>1st Year Notes</h1>
-      <div class="services__wrapper">
-        <div class="services__card">
-          <h2>B.Tech CSE</h2>
-          <p>Enigineering Physics</p>
-          <div class="services__btn"><button class="main__btn"><a href="https://drive.google.com/file/d/1VVtJcsAxlukV0jCELrfwNdbd02R2NygJ/view?usp=sharing">Download</a></button></div>
-        </div>
-        <div class="services__card">
-          <h2>B.Tech CSE</h2>
-          <p>Enigineering Chemistry</p>
-          <div class="services__btn"><button class="main__btn"><a href="https://drive.google.com/drive/folders/1tIsiVtcEVg4T03i8jf4Soua9EbWTWz4A">Download</a></button></div>
-        </div>
-        <div class="services__card">
-          <h2>B.Tech CSE</h2>
-          <p>Enigineering Maths</p>
-          <div class="services__btn"><button class="main__btn"><a href="https://drive.google.com/file/d/1UFa9oLGFRz8UtbmCW9mOkIN7w0qCeTUf/view?usp=sharing">Download</a></button></div>
-        </div>
-        <div class="services__card">
-          <h2>B.Tech CSE</h2>
-          <p>Basic Electrical Engineering</p>
-          <div class="services__btn"><button class="main__btn"><a href="https://drive.google.com/file/d/1S4pI_S4vA4RlZOqQGM80Z75c4vBmE0Ou/view?usp=sharing">Download</a></button></div>
-        </div>
-        <div class="services__card">
-            <h2>B.Tech CSE</h2>
-            <p>Programming for Problem Solving</p>
-            <div class="services__btn"><button class="main__btn"><a href="https://drive.google.com/file/d/1Ig7RgBnQR5iT-8yY5-WDqS_DK7584-rA/view?usp=sharing">Download</a></button></div>
-          </div>
-          <div class="services__card">
-            <h2>B.Tech CSE</h2>
-            <p>Emerging Domain in Electronics Engineering</p>
-            <div class="services__btn"><button class="main__btn"><a href="https://drive.google.com/file/d/1YsWXZjQYy-uKCd9DubliV9eVsTPhjtC5/view?usp=sharing">Download</a></button></div>
-          </div>
-          <div class="services__card">
-            <h2>B.Tech CSE</h2>
-            <p>Emerging Technology for Engineering</p>
-            <div class="services__btn"><button class="main__btn"><a href="https://drive.google.com/file/d/119K_4bnwvZSKinarbTSt1_ZuS2pwZMkQ/view?usp=sharing">Download</a></button></div>
-          </div>
-          <div class="services__card">
-            <h2>B.Tech CSE</h2>
-            <p>Soft Skills 1</p>
-            <div class="services__btn"><button class="main__btn"><a href="https://drive.google.com/file/d/1pHYniFRH_6PjUrzNXyMwScUBEOGwbnSY/view?usp=sharing">Download</a></button></div>
-          </div>
-          <div class="services__card">
-            <h2>B.Tech CSE</h2>
-            <p>Soft Skills 2</p>
-            <div class="services__btn"><button class="main__btn"><a href="https://drive.google.com/file/d/1Si0UL-pxglUvCo2KaXp0hIHwZBSZ34Fu/view?usp=sharing">Download</a></button></div>
-          </div>
-          <div class="services__card">
-            <h2>B.Tech CSE</h2>
-            <p>Artificial Intelligence</p>
-            <div class="services__btn"><button class="main__btn"><a href="https://drive.google.com/file/d/1ejnKl-VAtMUXKjx7pjte6KjkTOHUe8g5/view?usp=sharing">Download</a></button></div>
-          </div>
+    <!-- Hero Section -->
+    <div class="hero" id="home">
+      <div class="hero__container"data-aos="fade-down"
+      data-aos-easing="linear"
+      data-aos-duration="1500">
+        <h1 class="hero__heading">Your notes Your life Get <span>organized.</span></h1>
+        <p class="hero__description">Read more, Write less</p>
+        <button class="main__btn"><a href="#">Explore</a></button>
       </div>
     </div>
 
-    
+    <!-- About Section -->
+    <div class="main" id="about">
+      <div class="main__container">
+        <div class="main__img--container">
+          <div class="main__img--card"><img src="pi1.svg"></div>
+        </div>
+        <div class="main__content"data-aos="fade-down-left">
+          <h1>What do we do?</h1>
+          <h2>We help Student</h2>
+          <p>Our company will officially provide a cloud-based platform which specializes in providing revision notes, fully researched essays with APA formatting</p>
+          <button class="main__btn"><a href="#">Know more</a></button>
+        </div>
+      </div>
+    </div>
+
+    <!-- Services Section -->
+    <div class="services" id="services">
+      <h1>Our Notes</h1>
+      <div class="services__wrapper">
+        <div class="services__card" data-aos="fade-down-right"
+        data-aos-offset="300"
+        data-aos-easing="ease-out-cubic"data-aos-duration="2000">
+          <h2>B.Tech CSE</h2>
+          <p>1st Year</p>
+          <div class="services__btn"><button class="main__btn"><a href="first.html">Get Started</a></button></div>
+        </div>
+        <div class="services__card"data-aos="fade-down-right"
+        data-aos-offset="300"
+        data-aos-easing="ease-out-cubic"data-aos-duration="4000">
+          <h2>B.Tech CSE</h2>
+          <p>2nd Year</p>
+          <div class="services__btn"><button class="main__btn"><a href="second.html">Get Started</a></button></div>
+        </div>
+        <div class="services__card"data-aos="fade-down-left"
+        data-aos-offset="300"
+        data-aos-easing="ease-out-cubic"data-aos-duration="4000">
+          <h2>B.Tech CSE</h2>
+          <p>3rd Year</p>
+          <div class="services__btn"><button class="main__btn"><a href="third.html">Get Started</a></button></div>
+        </div>
+        <div class="services__card"data-aos="fade-down-left"
+        data-aos-offset="300"
+        data-aos-easing="ease-out-cubic"data-aos-duration="2000">
+          <h2>B.Tech CSE</h2>
+          <p>4th Year</p>
+          <div class="services__btn"><button class="main__btn"><a href="#">Get Started</a></button></div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Features Section -->
+    <div class="main" id="sign-up">
+      <div class="main__container">
+        <div class="main__content"data-aos="zoom-in-right">
+          <h1>Contact Us</h1>
+          <h2>Send a mail</h2>
+          <p>For any query or feedback</p>
+          <button class="main__btn"><a href="mailto::rishabhshrivastav371@gmail.com">Mail</a></button>
+        </div>
+        <div class="main__img--container" data-aos="zoom-in-left">
+          <div class="main__img--card" id="card-2">
+            <img src="pi5.svg">
+          </div>
+        </div>
+      </div>
+    </div>
 
     <!-- Footer Section -->
     <div class="footer__container">
@@ -107,48 +125,43 @@
         <div class="footer__link--wrapper">
           <div class="footer__link--items">
             <h2>About Us</h2>
-            <a href="/sign__up">How it works</a> <a href="/">Testimonials</a>
-            <a href="/">Careers</a> <a href="/">Terms of Service</a>
+            <a href="/sign__up">How it works</a> <a href="#">Testimonials</a>
+            <a href="#">Careers</a> <a href="#">Terms of Service</a>
           </div>
           <div class="footer__link--items">
             <h2>Contact Us</h2>
-            <a href="/">Contact</a> <a href="/">Support</a>
-            <a href="/">Destinations</a>
+            <a href="#">Contact</a> <a href="#">Support</a>
+            <a href="#">Destinations</a>
           </div>
         </div>
         <div class="footer__link--wrapper">
           <div class="footer__link--items">
-            <h2>Videos</h2>
-            <a href="/">Submit Video</a> <a href="/">Ambassadors</a>
-            <a href="/">Agency</a>
-          </div>
-          <div class="footer__link--items">
             <h2>Social Media</h2>
-            <a href="/">Instagram</a> <a href="/">Facebook</a>
-            <a href="/">Youtube</a> <a href="/">Twitter</a>
+            <a href="#">Instagram</a> <a href="#">Facebook</a>
+            <a href="#">Youtube</a> <a href="#">Twitter</a>
           </div>
         </div>
       </div>
       <section class="social__media">
         <div class="social__media--wrap">
           <div class="footer__logo">
-            <a href="/" id="footer__logo">Enotes</a>
+            <a href="#" id="footer__logo">Enotes</a>
           </div>
           <p class="website__rights">© Enotes 2022. All rights reserved</p>
           <div class="social__icons">
-            <a href="/" class="social__icon--link" target="_blank"
+            <a href="#" class="social__icon--link" target="_blank"
               ><i class="fab fa-facebook"></i
             ></a>
-            <a href="/" class="social__icon--link"
+            <a href="#" class="social__icon--link"
               ><i class="fab fa-instagram"></i
             ></a>
-            <a href="/" class="social__icon--link"
+            <a href="#" class="social__icon--link"
               ><i class="fab fa-youtube"></i
             ></a>
-            <a href="/" class="social__icon--link"
+            <a href="#" class="social__icon--link"
               ><i class="fab fa-linkedin"></i
             ></a>
-            <a href="/" class="social__icon--link"
+            <a href="#" class="social__icon--link"
               ><i class="fab fa-twitter"></i
             ></a>
           </div>
@@ -157,5 +170,16 @@
     </div>
 
     <script src="app.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init(
+        {
+          offset: 300,
+          delay: 5,
+          duration:800,
+          mirror: true,
+        }
+      );
+    </script>
   </body>
 </html>
